# serial_analysis

./: .gitignore  Dockerfile  LICENSE.txt  README.md  compose.yml  env.example  env_template.txt  init.sh  pyproject.toml  requirements.txt  serial_analysis_PDF.py
input_and_output/: assistant_message.txt  extracted_data.csv  fieldnames.txt  system_message.txt  user_message.txt
